k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: shi-service
spec:
  type: NodePort
  selector:
    app: shi-app
  ports:
    - port: 40988
      targetPort: 40988
