k8s/ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: shi-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /shi
            backend:
              service:
                name: shi-service
                port:
                  number: 7988
